all figures, tables added, bib cites added through intro

--- a/manuscript/lagosag.bib
+++ b/manuscript/lagosag.bib
@@ -225,7 +225,6 @@
   pages = {137--169},
   publisher = {{Springer Netherlands}},
   address = {{Dordrecht}},
-  doi = {10.1007/978-94-017-3405-9_4},
   url = {http://link.springer.com/10.1007/978-94-017-3405-9_4},
   urldate = {2019-07-26},
   file = {/home/jose/Zotero/storage/6S6YGHT6/Boyer et al. - 2002 - Anthropogenic nitrogen sources and relationships t.pdf},
@@ -1609,6 +1608,21 @@
   number = {11}
 }
 
+@book{nrcSustainableAgriculturalSystems2010,
+  title = {Toward {{Sustainable Agricultural Systems}} in the 21st {{Century}}},
+  author = {NRC},
+  year = {2010},
+  month = jun,
+  publisher = {{National Academies Press}},
+  address = {{Washington, D.C.}},
+  doi = {10.17226/12832},
+  url = {http://www.nap.edu/catalog/12832},
+  urldate = {2019-11-18},
+  file = {/home/jose/Zotero/storage/CGPICVPA/2010 - Toward Sustainable Agricultural Systems in the 21s.pdf},
+  isbn = {978-0-309-14896-2},
+  language = {en}
+}
+
 @article{ogeenErodibilityAgriculturalSoils,
   title = {Erodibility of {{Agricultural Soils}}, with {{Examples}} in {{Lake}} and {{Mendocino Counties}}},
   author = {O'Geen, Anthony Toby and Elkins, Rachel and Lewis, David},
@@ -2142,20 +2156,6 @@
   keywords = {used},
   language = {en},
   number = {7}
-}
-
-@book{SustainableAgriculturalSystems2010,
-  title = {Toward {{Sustainable Agricultural Systems}} in the 21st {{Century}}},
-  year = {2010},
-  month = jun,
-  publisher = {{National Academies Press}},
-  address = {{Washington, D.C.}},
-  doi = {10.17226/12832},
-  url = {http://www.nap.edu/catalog/12832},
-  urldate = {2019-11-18},
-  file = {/home/jose/Zotero/storage/CGPICVPA/2010 - Toward Sustainable Agricultural Systems in the 21s.pdf},
-  isbn = {978-0-309-14896-2},
-  language = {en}
 }
 
 @article{taranuQuantifyingRelationshipsPhosphorus2008,
