--- a/manuscript/manuscript.Rmd
+++ b/manuscript/manuscript.Rmd
@@ -115,15 +115,15 @@ vignette: >
 
 ## Introduction 
 
-Freshwaters are vulnerable to eutrophication in areas of high agricultural land-use and land cover because agricultural activities are associated with high nutrient runoff and loading to groundwater and streams (Allan 2004, Arbuckle and Downing, 2001, Daniel et al. 2010, Taranu et al. 2008). High runoff and loading in these areas is a result of high rates of nutrient input combined with hydrologic modifications that decrease the travel time of these inputs from the land surface to lakes \citep{blannEffectsAgriculturalDrainage2009}. Surprisingly, while some studies have found strong relationships between agricultural land-use and land cover (hereafter referred to as “land-use” or LULC) and lake nutrient concentrations (Arbuckle and Downing 2001, Taranu et al. 2008), others have found more mixed results (Jones et al. 2008), particularly in studies that include many lakes located in multiple regions (Soranno et al. 2015). Further examples of such macroscale studies (see Heffernan et al. 2014) in which lakes are spread across many regions at distances spanning hundreds to thousands of kilometers include \citet{collinsLakeNutrientStoichiometry2017} and Read et al. (2015), who found that the strength of agriculture and lake nutrient relationships varied depending on geographic region and lake characteristics. 
+Freshwaters are vulnerable to eutrophication in areas of high agricultural land-use and land cover because agricultural activities are associated with high nutrient runoff and loading to groundwater and streams \citep{allanLandscapesRiverscapesInfluence2004,arbuckleInfluenceWatershedLand2001,danielInfluencesSpatialScale2010,taranuQuantifyingRelationshipsPhosphorus2008}. High runoff and loading in these areas is a result of high rates of nutrient input combined with hydrologic modifications that decrease the travel time of these inputs from the land surface to lakes \citep{blannEffectsAgriculturalDrainage2009}. Surprisingly, while some studies have found strong relationships between agricultural land-use and land cover (hereafter referred to as “land-use” or LULC) and lake nutrient concentrations \citep{arbuckleInfluenceWatershedLand2001,downingPredictingCyanobacteriaDominance2001,taranuQuantifyingRelationshipsPhosphorus2008}, others have found more mixed results \citep{jonesRoleLandCover2008}, particularly in studies that include many lakes located in multiple regions \citep{sorannoEffectsLandUse2015}. Further examples of such macroscale studies (see \citealt{heffernanMacrosystemsEcologyUnderstanding2014}) in which lakes are spread across many regions at distances spanning hundreds to thousands of kilometers include \citet{collinsLakeNutrientStoichiometry2017} and \citet[]{readImportanceLakespecificCharacteristics2015}, who found that the strength of agriculture and lake nutrient relationships varied depending on geographic region and lake characteristics. 
 
-Mixed results from prior studies may be due to two difficulties in quantifying lake nutrient and agricultural land-use relationships. First, the pathways of nutrients from fields to streams and ultimately to lakes are complex and indirect (Cherry et al. 2008, Heathwaite et al. 2003, King et al. 2005). For example, in order for nitrogen applied as fertilizer to reach a lake, it must be transported to streams or groundwater in excess of microbial denitrification, plant use, and microbial uptake. Then, it must travel, again, often undergoing repeated chemical transformation as it passes through riparian buffers and along stream networks before finally entering the lake (Maranger et al. 2018). Each step of the journey represents an opportunity for those nutrients to be sequestered or removed. Further, overall hydrologic transport is influenced by soil type (Naiman et al. 2010), and topography. Thus, the nutrients that ultimately enter a lake are a function of filtering by the landscape as well as geochemical transformation processes that are difficult to capture at broad scales (Canham et al. 2012, Maranger et al. 2018). 
+Mixed results from prior studies may be due to two difficulties in quantifying lake nutrient and agricultural land-use relationships. First, the pathways of nutrients from fields to streams and ultimately to lakes are complex and indirect \citep{cherryAssessingEffectivenessActions2008,heathwaitePhosphorusIndicatorsTool2003,kingSpatialConsiderationsLinking2005}. For example, in order for nitrogen applied as fertilizer to reach a lake, it must be transported to streams or groundwater in excess of microbial denitrification, plant use, and microbial uptake. Then, it must travel, again, often undergoing repeated chemical transformation as it passes through riparian buffers and along stream networks before finally entering the lake \Citep{marangerStoichiometryCarbonNitrogen2018}. Each step of the journey represents an opportunity for those nutrients to be sequestered or removed. Further, overall hydrologic transport is influenced by soil type \citep{naiman2010riparia}, and topography. Thus, the nutrients that ultimately enter a lake are a function of filtering by the landscape as well as geochemical transformation processes that are difficult to capture at broad scales \citep{canhamNitrogenDepositionLake2012,marangerStoichiometryCarbonNitrogen2018}. 
 
-Second, much of our evidence for a connection between agricultural land-use and increased nutrient concentrations comes from studies focusing on a single watershed or on several watersheds within a single geographic region (Capel et al. 2018b, Daniel et al. 2010, Hayes et al. 2015, Renwick et al. 2008). These studies tend to focus on very detailed measures of agricultural activity such as tillage and other practices, nutrient amendments, and their spatial arrangement. However, studies at broader spatial scales (i.e., the macroscale, Heffernan et al. 2014), which aim to provide a more general view of relationships between lake nutrient concentrations and agriculture, tend to focus only on relatively coarse measures of agricultural activity (Fergus et al. 2016, Filstrup et al. 2018, Read et al. 2015, Schmadel et al. 2019). As a result, it is unclear to what extent the mixed results from prior broad-scale studies might be due to the limited use of detailed measures of agricultural activity or simply from regional variation. 
+Second, much of our evidence for a connection between agricultural land-use and increased nutrient concentrations comes from studies focusing on a single watershed or on several watersheds within a single geographic region \citep{capelpauldAgricultureRiverRuns2018,danielInfluencesSpatialScale2010, hayesClimateLandUse2015, renwickWaterQualityTrends2008}. These studies tend to focus on very detailed measures of agricultural activity such as tillage and other practices, nutrient amendments, and their spatial arrangement. However, studies at broader spatial scales (i.e., the macroscale, \citealt{heffernanMacrosystemsEcologyUnderstanding2014}, which aim to provide a more general view of relationships between lake nutrient concentrations and agriculture, tend to focus only on relatively coarse measures of agricultural activity \citep{filstrupEvidenceRegionalNitrogen2018,readImportanceLakespecificCharacteristics2015,schmadelSmallPondsHeadwater2019}. As a result, it is unclear to what extent the mixed results from prior broad-scale studies might be due to the limited use of detailed measures of agricultural activity or simply from regional variation. 
 
-There are two ways in which detailed (i.e., granular) measures of agricultural activity may be substituted for their coarse (i.e., aggregate) counterparts. The first is by using granular measures that are recorded in the same locations as their aggregate equivalents but are more descriptive. For example, in broad-scale studies, the proportion of land used for agriculture in a lake watershed is sometimes replaced by separate representations of the land used for pasture and the land used for row-crops (Abell et al. 2011, Collins et al., 2017). The second is by using granular measures that have the same description as their aggregate equivalents, but that are measured in more specific locations. For example, a small number of lake studies have compared the proportion of land used for agriculture in near-stream buffers versus the watershed as a whole (Gemesi et al. 2011, Soranno et al. 2015). Although the term granular can be used in a general sense to describe any detailed agricultural measure, we define the term more narrowly as only those that have a specific aggregate counterpart (Table \ref{table1}). 
+There are two ways in which detailed (i.e., granular) measures of agricultural activity may be substituted for their coarse (i.e., aggregate) counterparts. The first is by using granular measures that are recorded in the same locations as their aggregate equivalents but are more descriptive. For example, in broad-scale studies, the proportion of land used for agriculture in a lake watershed is sometimes replaced by separate representations of the land used for pasture and the land used for row-crops \citep{abellRelationshipsLandUse2011,collinsLakeNutrientStoichiometry2017}. The second is by using granular measures that have the same description as their aggregate equivalents, but that are measured in more specific locations. For example, a small number of lake studies have compared the proportion of land used for agriculture in near-stream buffers versus the watershed as a whole \citep{gemesiEffectsWatershedConfiguration2011,sorannoEffectsLandUse2015}. Although the term granular can be used in a general sense to describe any detailed agricultural measure, we define the term more narrowly as only those that have a specific aggregate counterpart (Table \ref{table1}). 
 
-Prior use of granular data in broad-scale studies of lake water quality has been limited. For this reason, findings from broad-scale studies may be less useful in applied management settings because coarse (i.e. aggregate) land-use and land cover change metrics have become less widely used policy instruments (Morefield et al. 2016). Instead, recent policy interventions go beyond aggregate measures of agricultural activity to target more specific measures such as implementation of specific farming practices, no-till agriculture, and construction of riparian buffer strips (Capel et al. 2018a, NRC 2010, Yang et al. 2005). Thus, broad-scale studies could be made more relevant for informing policy interventions if they used covariates that have a similar level of granularity to those used in fine-scale studies. For example, implementation of no-till agriculture policies may be better informed by covariates at the granular crop level rather than solely by aggregate covariates like land used for agriculture (Figure S1). 
+Prior use of granular data in broad-scale studies of lake water quality has been limited. For this reason, findings from broad-scale studies may be less useful in applied management settings because coarse (i.e. aggregate) land-use and land cover change metrics have become less widely used policy instruments \citep{morefieldGrasslandsWetlandsAgriculture2016}. Instead, recent policy interventions go beyond aggregate measures of agricultural activity to target more specific measures such as implementation of specific farming practices, no-till agriculture, and construction of riparian buffer strips \citep{capelConceptualFrameworkEffectively2018, nrcSustainableAgriculturalSystems2010,yangSpatialTargetingConservation2005}. Thus, broad-scale studies could be made more relevant for informing policy interventions if they used covariates that have a similar level of granularity to those used in fine-scale studies. For example, implementation of no-till agriculture policies may be better informed by covariates at the granular crop level rather than solely by aggregate covariates like land used for agriculture (Figure S1). 
 
 \begin{figure}[H]
   \begin{center}
@@ -133,13 +133,13 @@ Prior use of granular data in broad-scale studies of lake water quality has been
   \end{center}
 \end{figure}
 
-One likely reason that broad-scale studies have rarely used granular agricultural data is that until recently, such data have not been available with corresponding lake nutrient concentration data over large geographic extents. Although a few examples exist of studies connecting granular agricultural data to either stream nitrogen or phosphorus concentrations at the macroscale (Boyer et al. 2002, Bellmore et al. 2018, Metson et al. 2017), most studies have focused on either nitrogen (N) or phosphorus (P) but not on both at the same time (Alexander et al. 2008). Crucially, we are not aware of prior work examining relationships between a multiple granular measures of agricultural activity on either lake N or P concentrations at macroscales. 
+One likely reason that broad-scale studies have rarely used granular agricultural data is that until recently, such data have not been available with corresponding lake nutrient concentration data over large geographic extents. Although a few examples exist of studies connecting granular agricultural data to either stream nitrogen or phosphorus concentrations at the macroscale \citep{boyerAnthropogenicNitrogenSources2002,bellmoreNitrogenInputsDrive2018,metsonLinkingTerrestrialPhosphorus2017}, most studies have focused on either nitrogen (N) or phosphorus (P) but not on both at the same time \citep{alexanderDifferencesPhosphorusNitrogen2008}. Crucially, we are not aware of prior work examining relationships between a multiple granular measures of agricultural activity on either lake N or P concentrations at macroscales. 
 
-There are several plausible expectations, which are based on the findings of broad-scale stream studies as well as the findings of fine-scale lake studies, for the type of relationships between such measures and lake nutrient concentrations that may emerge at macroscales. First, we expect that increased nutrient inputs to the land surface as fertilizer and manure will increase lake nutrient concentrations (Bellmore and other 2018, Renwick et al. 2008). Second, we expect that lakes with watersheds that have high soil clay content and high soil organic carbon content will have higher lake nutrient concentrations. This will occur because clay soils tend to have higher rates of surface runoff and have higher organic matter content relative to sandy soils, despite the tendency for higher organic matter content to increase water storage and reduce surface runoff (Capel et al. 2018b). Finally, we expect that lakes with stream networks characterized by extensive near-stream agriculture will have higher nutrient concentrations because there will be less interception of agricultural runoff (Naiman et al. 2010). 
+There are several plausible expectations, which are based on the findings of broad-scale stream studies as well as the findings of fine-scale lake studies, for the type of relationships between such measures and lake nutrient concentrations that may emerge at macroscales. First, we expect that increased nutrient inputs to the land surface as fertilizer and manure will increase lake nutrient concentrations \citep{bellmoreNitrogenInputsDrive2018,renwickWaterQualityTrends2008}. Second, we expect that lakes with watersheds that have high soil clay content and high soil organic carbon content will have higher lake nutrient concentrations. This will occur because clay soils tend to have higher rates of surface runoff and have higher organic matter content relative to sandy soils, despite the tendency for higher organic matter content to increase water storage and reduce surface runoff \citep{capelpauldAgricultureRiverRuns2018}. Finally, we expect that lakes with stream networks characterized by extensive near-stream agriculture will have higher nutrient concentrations because there will be less interception of agricultural runoff \citep{naiman2010riparia}. 
 
-Although we can formulate potential expectations for relationships between agricultural activities and lake nutrients at the macroscale by building on the findings of prior studies, several key uncertainties remain. The first key uncertainty is the extent to which lake and watershed characteristics, such as watershed hydrology and soil type, affect relationships between granular measures of agricultural activity and lake nutrient concentrations at the macroscale. For example, macroscale studies have found that lake P concentrations are strongly dependent on lake depth (Collins et al. 2017), but the degree to which granular agricultural data provide additional explanatory power is unknown. Similarly, Abell et al. (2011) found that watershed to lake area ratio (i.e. lake water residence time) was positively related to lake N concentrations after controlling for aggregate measures of agricultural land-use, but it is unknown whether this mediation effect would also affect relationships with more granular measures of agriculture. 
+Although we can formulate potential expectations for relationships between agricultural activities and lake nutrients at the macroscale by building on the findings of prior studies, several key uncertainties remain. The first key uncertainty is the extent to which lake and watershed characteristics, such as watershed hydrology and soil type, affect relationships between granular measures of agricultural activity and lake nutrient concentrations at the macroscale. For example, macroscale studies have found that lake P concentrations are strongly dependent on lake depth \citep{collinsLakeNutrientStoichiometry2017}, but the degree to which granular agricultural data provide additional explanatory power is unknown. Similarly, \citet{abellRelationshipsLandUse2011} found that watershed to lake area ratio (i.e. lake water residence time) was positively related to lake N concentrations after controlling for aggregate measures of agricultural land-use, but it is unknown whether this mediation effect would also affect relationships with more granular measures of agriculture. 
 
-The second key uncertainty is the extent to which relationships between granular measures of agricultural activity and lake nutrient concentrations vary regionally. For example, previous macroscale studies on lake nutrient concentrations have found that relationships between lake chlorophyll and nutrient concentrations vary regionally according to hydrologic subregions (Wagner et al. 2011, Qian et al. 2019). Models in which separate relationships (e.g. slopes) are estimated for different regions, such as those used by Wagner et al. (2011), can be used to test differences among regions in the sensitivity to nutrient predictors. Wagner et al. (2011) found that the slope of the chlorophyll to P relationship was notably higher in several of their study regions and found that lakes with high pasture land-use in their watershed were more sensitive to changes in P concentrations (larger, positive slope estimate). They suggest that elevated sensitivity in high pasture regions is due to dual N and P nutrient enrichment associated with this land cover type. Given the findings of this and other studies in stream ecosystems (Alexander et al. 2008), it follows that other relationships in lakes may vary regionally, but whether or not this includes relationships with granular measures of agricultural activity remains unknown. 
+The second key uncertainty is the extent to which relationships between granular measures of agricultural activity and lake nutrient concentrations vary regionally. For example, previous macroscale studies on lake nutrient concentrations have found that relationships between lake chlorophyll and nutrient concentrations vary regionally according to hydrologic subregions \citep{wagnerLandscapeDriversRegional2011,qianImplicationsSimpsonParadox2019}. Models in which separate relationships (e.g. slopes) are estimated for different regions, such as those used by \citet{wagnerLandscapeDriversRegional2011}, can be used to test differences among regions in the sensitivity to nutrient predictors. \citet{wagnerLandscapeDriversRegional2011} found that the slope of the chlorophyll to P relationship was notably higher in several of their study regions and found that lakes with high pasture land-use in their watershed were more sensitive to changes in P concentrations (larger, positive slope estimate). They suggest that elevated sensitivity in high pasture regions is due to dual N and P nutrient enrichment associated with this land cover type. Given the findings of this and other studies in stream ecosystems \citep{alexanderDifferencesPhosphorusNitrogen2008}, it follows that other relationships in lakes may vary regionally, but whether or not this includes relationships with granular measures of agricultural activity remains unknown. 
 
 We addressed the knowledge gaps described above by asking two questions using data from approximately 900 lakes in the Northeastern and Midwestern US: 1) How do granular measures of agricultural activity relate to lake N and P concentrations? And, 2) How do relationships between agricultural activities and lake nutrients vary regionally among hydrologic and climatic regions? To answer these questions, we fit statistical models of lake nutrient concentrations as a function of granular measures of agricultural activity such as the proportion of watershed area land-use of specific crops, and near-stream land-use, as well as fertilizer and manure applications. We also included a variety of lake and watershed characteristics as predictors to account for the influence of other drivers. Finally, our models included a hierarchical component where relationships between watershed land-use and lake nutrient concentrations were allowed to vary among hydrologic subregions to examine potential regional variation in these relationships.
 
@@ -287,43 +287,3 @@ Due to a lack of temporally resolved data, our study focused on spatial patterns
 ## Conclusion
 
 We show that granular measures of agricultural activity are related to both lake N and P and that these relationships are regionally variable for lake N. Taken together, our results suggest that lake TP concentrations are more strongly driven by lake characteristics; whereas, lake TN concentrations are more strongly driven by watershed land-use. A consequence of our finding is that lake TP concentrations are largely predictable from lake-specific measures such as near-stream land-use, lake depth, and transport metrics like baseflow; whereas, accurate predictions of lake N likely requires not only lake specific information (including granular measures of agriculture) but also consideration of regional context due to complex regional variation of soil characteristics. Such differences in lake nutrient model sensitivity to measures of agricultural activity may affect the outcome of policies to enhance water quality depending on whether they focus on lake N or P.
-
-## Digital Figures 
-
-Markdown, Pandoc and LaTeX support `.eps` and `.pdf` files.
-
-Figures and Tables should be labelled and referenced in the standard way
-using the `\label{}` and `\ref{}` commands.
-
-The R examples above show how to insert a column-wide
-figure. To insert a figure wider than one column, please use the
-`\begin{figure*}...\end{figure*}` environment. 
-
-One (roundabout) way of doing this is to _not_ actually plot a figure, but to
-save it in a file as the following segment shows:
-
-This file is then included via standard LaTeX commands.
-
-\begin{equation}
-  \begin{aligned}
-(x+y)^3&=(x+y)(x+y)^2\\
-       &=(x+y)(x^2+2xy+y^2) \\
-       &=x^3+3x^2y+3xy^3+x^3. 
-       \label{eqn:example} 
-  \end{aligned}
-\end{equation}
-
-
-<!-- pandoc writes all tables using longtable, which fails in 2-column mode
-
-  Species                    CBS     CV     G3
-  ----------------------- ------ ------ ------
-  1\. Acetaldehyde           0.0    0.0    0.0
-  2\. Vinyl alcohol          9.1    9.6   13.5
-  3\. Hydroxyethylidene     50.8   51.2   54.0
-
-  : Comparison of the fitted potential energy surfaces and ab initio
-  benchmark electronic energy calculations
-
--->
-
